Add content-tool and well style

--- a/libs/jade/content-tool.jade
+++ b/libs/jade/content-tool.jade
@@ -57,7 +57,7 @@ block content
 
             p However, if you’re in this group and decide that you want to take part in work-related activity anyway, you can do. Use the contact details on your decision letter to let the DWP know you want to do this. They’ll let you know if there’s any suitable work-related activity going on in your area that you can join.
 
-            h2 The work-related activity groupAdd reference
+            h2 The work-related activity group
 
             p If you’ve been put into the work-related activity group it means the DWP has decided that your disability or health condition does limit your ability to work right now, but that there are things you can do to improve this.
 
@@ -68,40 +68,19 @@ block content
                     li you’re a lone parent with a child under one year old
                     li you’ve reached Pension Credit age
 
-            .well(style="background-color:#DFDFDF !important;")
+            .well--outline
                 h2 Check if your age excludes you from the work-related group interviews and activities
                 p Answer 2 questions to see if your age excludes you from the work-related group interviews and activities
                 button.btn.btn-primary.right-button-icon(type="button") Start
 
             h2 Outcomes
 
-            .well(style="background-color:#DFDFDF !important;")
+            .well--outline
+                h2 Your result
                 .callout
                     h3 You will have to do work-focused interviews and work-related activities.
-                    p This is because you won’t reach Pension Credit age until 9 September 2048.
-                button.btn.btn-secondary.restart-button-icon(type="reset") Restart
-                button.btn.btn-secondary.print-button-icon(type="button") Print
-
-            .well(style="background-color:#A2D5FF !important;")
-                h2 You will have to do work-focused interviews and work-related activities.
                 p This is because you won’t reach Pension Credit age until 9 September 2048.
                 button.btn.btn-secondary.restart-button-icon(type="reset") Restart
-                button.btn.btn-secondary.print-button-icon(type="button") Print
-
-
-            .well(style="background-color:#FFEBC6 !important;")
-                h2 You will have to do work-focused interviews and work-related activities.
-                p This is because you won’t reach Pension Credit age until 9 September 2048.
-                button.btn.btn-secondary.restart-button-icon(type="reset") Restart
-                button.btn.btn-secondary.print-button-icon(type="button") Print
-
-
-            .well(style="background-color:#D3E8C1 !important;")
-                h2 You won’t have to do work-focused interviews or work-related activities.
-                p This is because you reached Pension Credit age on 9 September 1980.
-                button.btn.btn-secondary.restart-button-icon(type="reset") Restart
-                button.btn.btn-secondary.print-button-icon(type="button") Print
-
 
             .callout--related
                 h3 Next steps
