--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -139,6 +139,14 @@
     .callout--border;
     border-radius: @form-border-radius;
 }
+.well--outline {
+    .callout (
+        @white,
+        @callout-border: @heritage-blue        
+    );
+    .callout--border;
+    border-radius: @form-border-radius;
+}
 
 /************************************************************************
  * Side panels - extending to style the panels that will run down the left-hand menu.
