--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3067,7 +3067,6 @@ div.tooltip:before {
 .section-notice__login__content p a:hover {
   border-bottom: 0.0625rem solid #fba437;
 }
-<<<<<<< HEAD
 .tools--sidebar {
   list-style: none;
   padding: 0;
@@ -3086,24 +3085,27 @@ div.tooltip:before {
 }
 .tools--sidebar .active {
   background-color: #004B88;
-=======
->>>>>>> 231f4151399e359050c9fecf1f4c650daf30085e
-.tools .-visited {
   font-weight: 700;
 }
-.group {
+.tools--sidebar .active a {
+  color: #FFF;
+}
+.tools--sidebar .-visited {
+  font-weight: 700;
+}
+.tools .group {
   display: table;
 }
-.group .field {
+.tools .group .field {
   display: table-cell;
   width: 100%;
   padding-right: 16px;
   padding-right: 1rem;
 }
-.group .function {
+.tools .group .function {
   display: table-cell;
 }
-.group .function button {
+.tools .group .function button {
   margin-right: 0;
 }
 /* Base files */
@@ -4157,11 +4159,7 @@ textarea.form__field {
   border: 1px solid #dfdfdf;
   z-index: -1;
   background-color: #f2f2f2;
-<<<<<<< HEAD
   box-sizing: content-box;
-=======
->>>>>>> 231f4151399e359050c9fecf1f4c650daf30085e
-  box-sizing: border-box;
 }
 .radio input:hover:before,
 .checkbox input:hover:before {
@@ -9353,10 +9351,6 @@ html[lang="en-SCT"] .main-nav {
   margin: 0.75rem 0rem;
   background-color: #f2f2f2;
   color: #191926;
-<<<<<<< HEAD
-  border: 0px #b3b3b3 solid;
-=======
->>>>>>> 231f4151399e359050c9fecf1f4c650daf30085e
   border: 0px #dfdfdf solid;
   display: block;
   /*.callout__link {
@@ -9400,10 +9394,6 @@ html[lang="en-SCT"] .main-nav {
 }
 .well:before {
   color: #191926;
-<<<<<<< HEAD
-  background-color: #b3b3b3;
-=======
->>>>>>> 231f4151399e359050c9fecf1f4c650daf30085e
   background-color: #dfdfdf;
 }
 .well > h1,
@@ -9413,10 +9403,6 @@ html[lang="en-SCT"] .main-nav {
   font-size: 1.3rem;
 }
 .well a {
-<<<<<<< HEAD
-  border-bottom-color: #b3b3b3;
-=======
->>>>>>> 231f4151399e359050c9fecf1f4c650daf30085e
   border-bottom-color: #dfdfdf;
 }
 .well > *:first-child {
@@ -9438,6 +9424,89 @@ html[lang="en-SCT"] .main-nav {
   margin-bottom: 0;
 }
 .well .callout__link:last-child {
+  border: none;
+}
+.well--outline {
+  padding: .75em 1em;
+  padding: 12px 16px;
+  padding: 0.75rem 1rem;
+  margin: 12px 0px;
+  margin: 0.75rem 0rem;
+  background-color: #FFF;
+  color: #191926;
+  border: 0px #004B88 solid;
+  display: block;
+  /*.callout__link {
+	 	cursor: pointer;
+	 	display: block;
+	    padding: @box-spacing-vertical @box-spacing-horizontal*4.5 @box-spacing-vertical @box-spacing-horizontal;
+	    margin: @box-spacing-vertical -@box-spacing-horizontal -@box-spacing-vertical -@box-spacing-horizontal;
+	    border: none;
+	    background-color: darken(spin(@callout-background, 15), 5%);
+	    color: @callout-text;
+	    border-bottom: 1px solid @callout-border;
+	    text-decoration: none;
+	    position: relative;
+		&:after {
+			box-sizing: border-box;
+		    font-family: 'FontAwesome';
+		    content: "\f054";
+		    color: @callout-text;
+		    background-color: darken(spin(@callout-background, 15), 10%);
+		    height: 100%;
+		    position: absolute;
+		    right: 0;
+		    top: 0;
+		    line-height: 3em;
+		    width: 3em;
+		    text-align: center;
+		}
+	    &:hover {
+	    	background-color: darken(spin(@callout-background, 15), 10%);
+	    	color: @callout-text;
+	    	&:after {
+	    		background-color: darken(spin(@callout-background, 15), 20%);
+	    	}
+	    }
+	    &--anchor:after {
+		    content: "\f063";
+	    }
+	}*/
+  border-width: 1px;
+  border-radius: 2px;
+}
+.well--outline:before {
+  color: #191926;
+  background-color: #004B88;
+}
+.well--outline > h1,
+.well--outline > h2,
+.well--outline > h3 {
+  color: #191926;
+  font-size: 1.3rem;
+}
+.well--outline a {
+  border-bottom-color: #004B88;
+}
+.well--outline > *:first-child {
+  padding-top: 0;
+}
+.well--outline h1:first-child,
+.well--outline h2:first-child,
+.well--outline h3:first-child,
+.well--outline h4:first-child,
+.well--outline h5:first-child,
+.well--outline h6:first-child {
+  margin-top: 0;
+  padding-top: 0;
+}
+.well--outline li:first-child {
+  padding-top: 0;
+}
+.well--outline > *:last-child {
+  margin-bottom: 0;
+}
+.well--outline .callout__link:last-child {
   border: none;
 }
 /************************************************************************
@@ -12979,4 +13048,3 @@ span[id*="overlay_button"] {
     padding-left: 1em;
   }
 }
-/*# sourceMappingURL=site.css.map */
