- Use smaller logo on mobile - Hide section notice on mobile

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -24,9 +24,13 @@ body{
 	display: block !important;
 }
 
-.print-only.logo {
+.main-header__logo.wide {
 	display: block;
 	.spacing(margin-bottom,@box-spacing);
+}
+
+.title__subheading {
+	display: none;
 }
 
 a {
