--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -49,7 +49,9 @@ html
 			header.main-header
 				.main-header__content
 					a.main-header__logo(href="", title="Citizens Advice home")
-						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg")
+						img(alt="Citizens Advice", src="assets/images/ca-logo_100px.svg")
+					a.main-header__logo.wide(href="", title="Citizens Advice home")
+						img(alt="Citizens Advice", src="assets/images/CA-logo-hz-280px.svg")
 
 					.main-header__links(data-track-zone="top-bar")
 						a.main-header__menu-link.js-toggle-menu(href="")
