Fixed off-center logo

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -51,7 +51,8 @@
         display: none;
         border: none;
         float: none;
-        max-width: 90%;
+        max-width: 100%;
+        .spacing(padding,0,1);
         @media ( max-width: @screen-xs-max ) {
             display: block;
             text-align: center;
