--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -48,10 +48,12 @@ html
 		if mockup
 			header.main-header
 				.main-header__content
-					a.main-header__logo(href="", title="Citizens Advice home")
+					a.main-header__logo.no-print(href="", title="Citizens Advice home")
 						img(alt="Citizens Advice", src="assets/images/ca-logo_100px.svg")
-					a.main-header__logo.wide(href="", title="Citizens Advice home")
-						img(alt="Citizens Advice", src="assets/images/CA-logo-hz-280px.svg")
+					a.main-header__logo.no-print.wide(href="", title="Citizens Advice home")
+						img(alt="Citizens Advice", src="assets/images/ca-logo-hz-white-280px.svg")
+					a.main-header__logo.print-only(href="", title="Citizens Advice home")
+						img(alt="Citizens Advice", src="assets/images/ca-logo-hz-280px.svg")
 
 					.main-header__links(data-track-zone="top-bar")
 						a.main-header__menu-link.js-toggle-menu(href="")
