Changes input:before back to border-box, content-box was a merge mistake

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -233,7 +233,7 @@ textarea.form__field {
             border: 1px solid @gray-6;
             z-index: -1;
             background-color: @gray-8;
-            box-sizing: content-box;
+            box-sizing: border-box;
         }
         &:hover:before {
             border-color: @gray-5;
