--- a/libs/jade/budgeting-tool.jade
+++ b/libs/jade/budgeting-tool.jade
@@ -13,7 +13,7 @@ block breadcrumbs
         {title: "Templates", href: "index.html#templates"},
         {title: "Budgeting Tool"}])
 
-block sidebar
+//block sidebar
     - var section = "Nav"
     +sidebar([
         {title: "Budgeting Tool"}
@@ -72,17 +72,17 @@ block content
             button.btn.btn-primary-light.left-button-icon(type="button") Income
             button.btn.btn-primary.right-button-icon(type="button") Household
 
-            ul
-                li.side-nav-beta__heading.-active.-open
-                    a
-                        span Budgeting tool
-                li
-                    ul
-                        li.side-nav-beta__sibling.-visited
-                            a(href="#") Start
-                        li.side-nav-beta__sibling.-visited
-                            a(href="#") 1. Income
-                        li.side-nav-beta__sibling.-current
-                            a(href="#") 2. Benefits
-                        li.side-nav-beta__sibling
-                            a(href="#") 3. Household
+        nav.side-nav-beta.tools
+            li.side-nav-beta__heading.-active.-open
+                a
+                    span Budgeting tool
+            li(style="list-style:none;")
+                ul
+                    li.side-nav-beta__sibling.-visited
+                        a(href="#") Start
+                    li.side-nav-beta__sibling.-visited
+                        a(href="#") 1. Income
+                    li.side-nav-beta__sibling.-current
+                        a(href="#") 2. Benefits
+                    li.side-nav-beta__sibling
+                        a(href="#") 3. Household
