--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -260,6 +260,10 @@ html
 								br
 								| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 
+								<!--[if IE 8]></div><![endif]-->
+								script(src="../libs/javascript/advisor.js")
+								script(src="../libs/javascript/core.js")
+
 		else
 			footer.main-footer(data-track-zone="footer", id="footer")
 				.main-footer__content.flex-row.js-equal-height
