- Fixes for radio backgrounds on firefox - Fixes for dropdown arrow on firefox

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -217,6 +217,7 @@ textarea.form__field {
     display: block;
     .spacing(margin-right,@box-spacing-horizontal/2);
     z-index: 1;
+    background-color: @gray-8;
     input {
         &:before {
             content: '';
@@ -304,6 +305,7 @@ textarea.form__field {
         border: none;
         cursor: pointer;
         -webkit-appearance: none;
+        -moz-appearance: window;
         padding-right: 2em;
     }
 }
