Removed circles from btn-icon mixin

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -292,7 +292,7 @@ textarea.form__field {
 .dropdown {
     border-radius: @form-border-radius;
     border: 1px solid @gray-6;
-    .btn-icon("\F0D7",@color:@black,@border:no-border);
+    .btn-icon("\F0D7",@color:@black);
     padding-right: 0;
     background-color: @white;
     display: inline-block;
