--- a/libs/mixins/btn-icon.less
+++ b/libs/mixins/btn-icon.less
@@ -4,26 +4,30 @@
  * Mixin to add icons to buttons by picking the content, position, color and border.
  */
 
-.btn-icon(@icon: "\f054"; @position: right; @color: @white; @border: border) {
+.btn-icon(@icon: "\f054"; @position: right; @color: @white; @border: false) {
     position: relative;
-    padding-@{position}: 3.5em;
+    padding-@{position}: 2.5em;
+    text-transform: uppercase;
     &:after {
-        @{position}: 0.5em;
+        @{position}: 1em;
         font-family: 'Helvetica', 'FontAwesome';
         font-weight: 300;
         content: @icon;
         color: @color;
-        line-height: 1.9em;
-        width: 2em;
-        height: 2em;
         text-align: center;
-        border: 2px solid @color;
-        .round(@round-colour: @color;);
         .vertical-align(absolute);
-        & when (@border = no-border) {
-            border: none;
-            line-height: 2em;
-            width: 1em;
+        top: 52%;
+    }
+    & when (@border = true) {
+        padding-@{position}: 3.5em;
+        &:before {
+            @{position}: 0.5em;
+            content: "";
+            width: 2em;
+            height: 2em;
+            border: 2px solid @color;
+            .round(@round-colour: @color;);
+            .vertical-align(absolute);  
         }
     }
 }
