--- a/libs/modules/overlay.less
+++ b/libs/modules/overlay.less
@@ -56,7 +56,7 @@
 		-ms-flex-negative: 0;
 		flex-shrink: 0;
 		//margin-bottom: @box-spacing-vertical*2;
-		//.btn-icon("\f00d",@color:@heritage-blue,@border:no-border);
+		//.btn-icon("\f00d",@color:@heritage-blue);
 	}
 
 
@@ -81,7 +81,7 @@
 					margin: 0;
 				}
 				button {
-					.btn-icon("\f014",@border:no-border);
+					.btn-icon("\f014");
 					.vertical-align(absolute);
 					right: unit(@box-spacing-horizontal*.75*@base-size,px);
 					right: @box-spacing-horizontal*.75;
@@ -98,7 +98,7 @@
 						color: @red;
 					}
 					button {
-						.btn-icon("\f0e2",@border:no-border);
+						.btn-icon("\f0e2");
 						.vertical-align(absolute);
 						right: unit(@box-spacing-horizontal*.75*@base-size,px);
 						right: @box-spacing-horizontal*.75;
