--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -346,7 +346,7 @@ span[id*="overlay_button"] {
 
 .inline--button {
     float: right;
-    .btn-icon("\f06e",@border:no-border);
+    .btn-icon("\f06e");
     margin-right: -1em;
     &:after {
         background-color: #b9b9a4;
