Created budget results + styles for budgeting tool

--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -421,3 +421,14 @@ div.tooltip:before {
 .-visited {
     font-weight: @font-weight-bolder;
 }
+table.budget {
+    width: 100%;
+    .total {
+        font-weight: @font-weight-bolder;
+        background-color: @gray-8;
+    }
+    .amount {
+        width: 30%;
+        text-align: right;
+    }
+}
