--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -20,10 +20,10 @@ tr {
     border: solid @gray-6;
     border-width: 1px 0;
     &:nth-child(odd) {
-        background-color: @white;
+        //background-color: @white;
     }
     &:nth-child(even) {
-        background-color: @gray-8;
+        //background-color: @gray-8;
     }
     & > td {
         border: solid @gray-6;
