--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3061,6 +3061,17 @@ div.tooltip:before {
 .-visited {
   font-weight: 700;
 }
+table.budget {
+  width: 100%;
+}
+table.budget .total {
+  font-weight: 700;
+  background-color: #f2f2f2;
+}
+table.budget .amount {
+  width: 30%;
+  text-align: right;
+}
 /* Base files */
 /**
  * COLOR DEFINITIONS
@@ -3319,12 +3330,6 @@ th {
 tr {
   border: solid #dfdfdf;
   border-width: 1px 0;
-}
-tr:nth-child(odd) {
-  background-color: #FFF;
-}
-tr:nth-child(even) {
-  background-color: #f2f2f2;
 }
 tr > td {
   border: solid #dfdfdf;
@@ -12950,3 +12955,4 @@ span[id*="overlay_button"] {
     padding-left: 1em;
   }
 }
+/*# sourceMappingURL=site.css.map */
