--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -84,6 +84,8 @@ block content
 				.callout--warning
 					p If you don’t get the permission or approval you need, you could be fined, prosecuted or made to pay to put things right.
 
+				a.back-to-top(href="#") Back to Top
+
 			section#step2
 				h2.ref-heading
 					span.ref-heading__heading Step 2: Find good builders or contractors
@@ -367,4 +369,23 @@ block content
 			if(event.which=='27'){
 				$("div#simpleModal").removeClass('show');
 			}
+		});
+
+	script.
+		jQuery(document).ready(function() {
+		    var offset = 220;
+		    var duration = 500;
+		    jQuery(window).scroll(function() {
+		        if (jQuery(this).scrollTop() > offset) {
+		            jQuery('.back-to-top').fadeIn(duration);
+		        } else {
+		            jQuery('.back-to-top').fadeOut(duration);
+		        }
+		    });
+		    
+		    jQuery('.back-to-top').click(function(event) {
+		        event.preventDefault();
+		        jQuery('html, body').animate({scrollTop: 0}, duration);
+		        return false;
+		    })
 		});
