Added charts to budget results

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3345,6 +3345,9 @@ tr > th {
 tr > th:last-child {
   border-right: 0;
 }
+tr:hover {
+  background-color: #f2f2f2;
+}
 td > *:first-child {
   padding-top: 0;
 }
