--- a/libs/jade/budget-results.jade
+++ b/libs/jade/budget-results.jade
@@ -2,7 +2,7 @@ block settings
 	- var title = "Budgeting tool"
 	- var sidebar = true
 	- var toolbars = true
-	- var cookiemonster = true
+	//- var cookiemonster = true
 	- var mockup = true
 
 extends ../template/template.jade
@@ -14,12 +14,9 @@ block breadcrumbs
 		{title: "Budgeting tool"}])
 
 block sidebar
-	- var section = "Home improvements"
+	- var section = "Sidebar"
 	+sidebar([
-		{title: "Before you get building work done"},
-		{title: "Problem with building work, decorating or home improvements"},
-		{title: "Cancelling building or decorating work"},
-		{title: "Building organisations"}
+		{title: "Link"}
 		],0)
 
 block section-notice
@@ -27,6 +24,241 @@ block section-notice
 		h2.screenreader Notice
 		.section-notice__content
 			p #[span.badge NEW] This page is part of #[a(href="#") our new approach to digital advice].
+
+block script
+	script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
+	script(src="../libs/javascript/vendor/highcharts/highcharts.js")
+	script(src="../libs/javascript/vendor/highcharts/modules/exporting.js")
+	script.
+		// PIE CHART
+		$(function () {
+			var chart = new Highcharts.Chart({
+				chart: {
+					type: 'pie',
+					renderTo: 'mobile-chart'
+				},
+				title: {
+					text: 'Spending'
+				},
+				tooltip: {
+					valuePrefix: '£'
+				},
+				plotOptions: {
+					pie: {
+						allowPointSelect: true,
+						cursor: 'pointer',
+						dataLabels: {
+							enabled: true
+						},
+						showInLegend: false
+					}
+				},
+				credits: {
+					enabled: false
+				},
+				series: [{
+					name: 'Spending',
+					colorByPoint: true,
+					data: [{
+						name: 'Bills',
+						y: 6
+					}, {
+						name: 'Household',
+						y: 11
+					}, {
+						name: 'Leisure',
+						y: 10
+					}, {
+						name: 'Travel',
+						y: 4
+					}, {
+						name: 'Car',
+						y: 7
+					}, {
+						name: 'Child',
+						y: 7
+					}, {
+						name: 'Family',
+						y: 3
+					}, {
+						name: 'Debt',
+						y: 14
+					}, {
+						name: 'Savings',
+						y: 1
+					}]
+				}]
+			});
+		});
+
+		// DESKTOP CHART
+		$(function () {
+
+			var colors = Highcharts.getOptions().colors,
+				categories = ['Bills', 'Household', 'Leisure', 'Travel', 'Car', 'Child', 'Family', 'Debt', 'Savings'],
+				data = [{
+					y: 6,
+					color: colors[0],
+					drilldown: {
+						name: 'Bills',
+						categories: ['Rent or mortgage', 'Council Tax / Rates', 'Buildings and contents insurance', 'Gas and electricity', 'Water', 'TV licence'],
+						data: [1, 1, 1, 1, 1, 1],
+						color: colors[0]
+					}
+				}, {
+					y: 11,
+					color: colors[1],
+					drilldown: {
+						name: 'Household',
+						categories: ['Grocery shopping (include food, drinks, toiletries and cleaning supplies etc)', 'Work lunches and coffees, teas etc', 'Cigarettes and tobacco', 'Alcohol (bought from an off-licence or shop but not from the pub, bar or restaurant)', 'Clothing and footwear', 'Repairs and house maintenance', 'Hire purchases or conditional sale items (eg a sofa or TV paid in monthly instalments)', 'Haircuts', 'Laundrette', 'Medicines (including prescription charges)', 'Dentistry', 'Insurance (life or home, but not travel)'],
+						data: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+						color: colors[1]
+					}
+				}, {
+					y: 10,
+					color: colors[2],
+					drilldown: {
+						name: 'Leisure',
+						categories: ['Meals and drinks out', 'Memberships (eg gym or cinema membership)', 'Magazines and newspapers', 'Books or music (in any format)', 'Website subscriptions (eg news, dating or music/video streaming websites)', 'Season tickets', 'Cinema or theatre tickets', 'Holiday (include cost of travel, accommodation, expenses while you’re there and travel insurance) ', 'Cigarettes or other tobacco', 'Lottery and pools'],
+						data: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+						color: colors[2]
+					}
+				}, {
+					y: 4,
+					color: colors[3],
+					drilldown: {
+						name: 'Travel',
+						categories: ['Public transport (including season tickets', 'Taxis', 'Bicycle (including running costs such as repair or rental', 'Car rental (including petrol'],
+						data: [1, 1, 1, 1],
+						color: colors[3]
+					}
+				}, {
+					y: 7,
+					color: colors[4],
+					drilldown: {
+						name: 'Car',
+						categories: ['Car insurance', 'Road tax', 'Fuel', 'MOT', 'Car maintenance', 'Breakdown or recovery', 'Parking/congestion charges'],
+						data: [1, 1, 1, 1, 1, 1, 1],
+						color: colors[4]
+					}
+				}, {
+					y: 7,
+					color: colors[5],
+					drilldown: {
+						name: 'Child',
+						categories: ['Childcare', 'Child support/maintenance', 'Tuition fees', 'School uniform', 'School meals', 'Pocket money and school trips', 'Nappies and baby items (if you haven’t already included in groceries)'],
+						data: [1 ,1 ,1 ,1 ,1 ,1 ,1],
+						color: colors[5]
+					}
+				}, {
+					y: 3,
+					color: colors[6],
+					drilldown: {
+						name: 'Family',
+						categories: ['Adult care (eg care home costs for an elderly relative)', 'Christmas and birthday presents', 'Pet-related expenses (eg vet bills, pet food and insurance)'],
+						data: [1, 1, 1],
+						color: colors[6]
+					}
+				}, {
+					y: 14,
+					color: colors[7],
+					drilldown: {
+						name: 'Debt',
+						categories: ['Mortgage, rent or any loans secured against your home', 'Council Tax', 'Credit card, store card debts or payday loans', 'Bank or building society loans', 'Personal loans', 'Catalogue, home credit or in-store credit debts', 'Overdrafts' , 'Money borrowed from friends or family', 'Income Tax, National Insurance and VAT', 'Gas and electricity bills', 'Child maintenance', 'TV licence', 'Hire purchase agreements', 'Court fines'],
+						data: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+						color: colors[7]
+					}
+				}, {
+					y: 1,
+					color: colors[8],
+					drilldown: {
+						name: 'Savings',
+						categories: ['Savings'],
+						data: [1],
+						color: colors[8]
+					}
+				}],
+				sectionData = [],
+				spendingData = [],
+				i,
+				j,
+				dataLen = data.length,
+				drillDataLen,
+				brightness;
+
+			// Build the data arrays
+			for (i = 0; i < dataLen; i += 1) {
+
+				// add browser data
+				sectionData.push({
+					name: categories[i],
+					y: data[i].y,
+					color: data[i].color
+				});
+
+				// add version data
+				drillDataLen = data[i].drilldown.data.length;
+				for (j = 0; j < drillDataLen; j += 1) {
+					brightness = 0.2 - (j / drillDataLen) / 5;
+					spendingData.push({
+						name: data[i].drilldown.categories[j],
+						y: data[i].drilldown.data[j],
+						color: Highcharts.Color(data[i].color).brighten(brightness).get()
+					});
+				}
+			}
+
+			// Create the chart
+			var chart = new Highcharts.Chart({
+				chart: {
+					type: 'pie',
+					renderTo: 'desktop-chart'
+				},
+				title: {
+					text: 'Spending'
+				},
+				plotOptions: {
+					pie: {
+						shadow: false,
+						center: ['50%', '50%'],
+						cursor: 'pointer',
+						dataLabels: {
+							enabled: true
+						}
+					}
+				},
+				tooltip: {
+					valuePrefix: '£'
+				},
+				series: [{
+					name: 'Spending',
+					data: sectionData,
+					size: '50%',
+					dataLabels: {
+						formatter: function () {
+							return this.y > 5 ? this.point.name : null;
+						},
+						color: '#ffffff',
+						distance: -30
+					}
+				}, {
+					name: 'Versions',
+					data: spendingData,
+					size: '80%',
+					innerSize: '50%',
+					dataLabels: {
+						formatter: function () {
+							// display only if larger than 1
+							return this.y > 10 ? '<b>' + this.point.name + ':</b> £' + this.y : null;
+						}
+					}
+				}]
+			});
+		});
+	style.
+		.highcharts-button {
+			display: none;
+		}
 				
 block content
 	.articleContent
@@ -41,6 +273,9 @@ block content
 			h3 You are spending [OverAmount] more than your income
 			h3 You are spending [UnderAmount] less than your income
 
+			div#desktop-chart(style="min-width: 310px; margin: 0 auto;")
+			div#mobile-chart(style="min-width: 310px; margin: 0 auto;")
+
 			.collapse.collapsible
 				.collapse-toggle See a detailed breakdown of your income and spending
 				.collapse-content
@@ -50,14 +285,14 @@ block content
 								th(scope="col", colspan="2") Income
 						tbody
 							tr
-								td Item
-								td.amount £100.00
+								td Benefits
+								td.amount £250.00
 							tr
-								td Item
-								td.amount £150.00
+								td Income
+								td.amount £1500.00
 							tr.total
 								td Total
-								td.amount £250.00
+								td.amount £1750.00
 
 					table.budget
 						thead
@@ -65,27 +300,24 @@ block content
 								th(scope="col", colspan="2") Spending
 						tbody
 							tr
-								td Item
-								td.amount £30.00
+								td Health, eg medicines/treatments
+								td.amount £70.50
 							tr
-								td Item
-								td.amount £30.00
+								td Savings/investments
+								td.amount £60.00
 							tr
-								td Item
-								td.amount £30.00
+								td Life insurance
+								td.amount £20.00
 							tr
-								td Item
-								td.amount £30.00
-							tr
-								td Item
-								td.amount £30.00
+								td Health insurance
+								td.amount £15.00
 							tr.total
 								td Total
-								td.amount £150.00
+								td.amount £165.50
 
 					a.collapse-toggle-close Close
 
-			a Download your full budget sheet to save or print [PDF format]
+			a.a-pdf-doc Download your full budget sheet to save or print
 
 			H3 Next steps
 
@@ -119,17 +351,20 @@ block content
 
 			H3 Dealing with debts
 
-			p Whatever the results of your budget, there are things you can do to sort out your debts. 
-
-			p Your budget will help you to find the right debt solution for your circumstances. There are a number of options available to you depending on how much (if any) spare income you have each month. You can read #[a(href="https://www.citizensadvice.org.uk/debt-and-money/help-with-debt/options-for-getting-out-of-debt/checking-your-options-for-getting-out-of-debt/") options for getting out of debt]. Or get help from your #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/") local Citizens Advice]. 
+			p If you have debts your budget can be used to help find the right debt solution for your circumstances. The options available to you depend on how much (if any) spare income you have each month. You can see our content on #[a(href="https://www.citizensadvice.org.uk/debt-and-money/help-with-debt/options-for-getting-out-of-debt/checking-your-options-for-getting-out-of-debt/") getting out of debt], or get help from your #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/") local Citizens Advice]. 
 
 			H3 Tips for keeping on top of your budget
 
-			p Keep a spending diary for a month to keep track of exactly what you spend. You could keep receipts and write down everything you spend your money on or use a spending diary app on your mobile phone
+			p Keep a spending diary for a month to keep track of exactly what you spend. You could keep receipts and write down everything you spend your money on or use a spending diary app on your mobile phone.
 			ul
-				li sign up for text balance alerts from your bank - this can help you keep on top of your bank balance
-				li sign up for online banking - it can be quicker and easier to check your bank balance
+				li Sign up for text balance alerts from your bank - this can help you keep on top of your bank balance.
+				li Sign up for online banking - it can be quicker and easier to check your bank balance.
 
-			H3 Guidance sessions on budgeting and managing money
+			p Some local Citizens Advice offices also run free sessions on budgeting and managing your money. They cover things like:
+			ul
+				li how to reduce your costs
+				li how to budget
+				li how to set up and use a bank account
+				li how to set up standing orders and direct debits 
 
-			p Some local Citizen Advice also run free, practical guidance sessions on budgeting and managing money. These cover things like how to reduce your costs, how to budget, how to set up and use bank accounts, how to set up standing orders and payments by direct debit etc. If you’re interested, ask your #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/") local Citizens Advice] whether they offer these services (often referred to as ‘financial capability’).
+			p Ask #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/") local Citizens Advice] whether they offer these services.
