--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -33,6 +33,8 @@ html
 		script(src="../libs/vendors/prism/prism.js")
 		script(src="../libs/javascript/smooth.js")
 
+		block script
+
 	body
 		<!--[if IE 8]><div class="ie8"><![endif]-->
 		.skip-nav
