--- a/libs/jade/budget-results.jade
+++ b/libs/jade/budget-results.jade
@@ -273,8 +273,8 @@ block content
 			h3 You are spending [OverAmount] more than your income
 			h3 You are spending [UnderAmount] less than your income
 
-			div#desktop-chart(style="min-width: 310px; margin: 0 auto;")
-			div#mobile-chart(style="min-width: 310px; margin: 0 auto;")
+			div#desktop-chart.hide-mobile(style="min-width: 310px; margin: 0 auto;")
+			div#mobile-chart.show-mobile(style="min-width: 310px; margin: 0 auto;")
 
 			.collapse.collapsible
 				.collapse-toggle See a detailed breakdown of your income and spending
