Fix to hide and show mobile

--- a/libs/base/utility.less
+++ b/libs/base/utility.less
@@ -156,7 +156,7 @@ a.remove {
     }
 }
 .show-mobile {
-    @media (min-width:@screen-sm-min) {
+    @media (min-width:@screen-md-min) {
         display: none;
     }
 }
