--- a/libs/jade/budget-results.jade
+++ b/libs/jade/budget-results.jade
@@ -45,7 +45,7 @@ block script
 				},
 				plotOptions: {
 					pie: {
-						allowPointSelect: true,
+						allowPointSelect: false,
 						cursor: 'pointer',
 						dataLabels: {
 							enabled: true
