Links long-form

--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -85,6 +85,7 @@ block content
 					p If you don’t get the permission or approval you need, you could be fined, prosecuted or made to pay to put things right.
 
 				a.back-to-top(href="#") Back to Top
+				span.back-to-top-icon #[a(href="#overview") Back to overview]
 
 			section#step2
 				h2.ref-heading
@@ -150,6 +151,8 @@ block content
 
 				p When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.
 
+				span.back-to-top-icon #[a(href="#overview") Back to overview]
+
 			section#step3
 				h2.ref-heading
 					span.ref-heading__heading Step 3: Get quotes before you decide who to use
@@ -199,6 +202,8 @@ block content
 				h4 See a sample quote
 				p You can download a PDF of a #[a(href="#") sample quote].
 
+				span.back-to-top-icon #[a(href="#overview") Back to overview]
+
 			section#step4
 				h2.ref-heading
 					span.ref-heading__heading Step 4: Check there’s insurance in place
@@ -225,6 +230,8 @@ block content
 
 				.callout
 					p If you don’t have home and contents insurance, it’s worth getting some before the work starts - there’s a bigger risk your home will be damaged or your things stolen while work’s going on.
+
+				span.back-to-top-icon #[a(href="#overview") Back to overview]
 
 			section#step5
 				h2.ref-heading
@@ -313,6 +320,8 @@ block content
 					h3 Further help
 
 					p Contact the #[a(href="#") Citizens Advice consumer helpline] if you need more help - a trained adviser can give you advice over the phone or by email. Contact the Consumerline if you're in #[a(href="#") Northern Ireland].
+
+				span.back-to-top-icon #[a(href="#overview") Back to overview]
 
 			section#step6
 				h2.ref-heading
