--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -89,6 +89,13 @@
 .up-button-icon {
     .btn-icon("\f077");
 }
+
+.back-to-top-icon {
+    .btn-icon("\f077", left, @heritage-blue-light);
+    margin-left: -@box-spacing;
+}
+
+
 .exclamation-button-icon {
     .btn-icon("\0021");
 }
