--- a/public/css/site.css
+++ b/public/css/site.css
@@ -5051,6 +5051,25 @@ input.custom-dropdown__button {
   transform: translateY(-50%);
   top: 52%;
 }
+.back-to-top-icon {
+  position: relative;
+  padding-left: 2.5em;
+  margin-left: -1rem;
+}
+.back-to-top-icon:after {
+  left: 1em;
+  font-family: 'Helvetica', 'FontAwesome';
+  font-weight: 300;
+  content: "\f077";
+  color: #229cff;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  top: 52%;
+}
 .exclamation-button-icon {
   position: relative;
   padding-right: 2.5em;
